[package]
name = "bilbil-live"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread"]}
serde_yaml = "0.9.33"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = "0.12.4"
log = "0.4.21"
ansi_term = "0.12.1"
chrono = "0.4.38"