[package]
name = "bilbil-live"
version = "0.1.0"
edition = "2021"
authors = ["yunshen <yunshen4869@gmail.com>"]
license = "MIT"
keywords = ["bilbil", "blibli-live"]
description = "一个直播间弹幕发送工具"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "BILBIL-LIVE.EXE"
LegalCopyright = "Copyright © 2024"

[workspace]
members = ["bil_derive"]

[dependencies]
bil_derive = {path = "bil_derive"}
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread", "rt"] }
serde_yaml = "0.9.33"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = {version = "0.12.4", features = ["multipart", "cookies", "json"] }
log = "0.4.21"
ansi_term = "0.12.1"
chrono = "0.4.38"
async-trait = "0.1.80"
serde_json = "1.0.117"
rand = "0.9.0-alpha.1"
qrcode = "0.14.0"
md5 = "0.7.0"